Fix overflow issues with HP in IE11

--- a/pipeline/scss/pages/_homepage.scss
+++ b/pipeline/scss/pages/_homepage.scss
@@ -258,6 +258,7 @@ ul.animated {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
   }
   hr,
   .hr {
